--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
 .box-model{
     background-color: whitesmoke;
+    width: 280px;
+    height: 280px;
+    padding-left: 20px;
+    padding-top: 20px;
+    border: solid black 2px;
+
 }
