--- a/styles.css
+++ b/styles.css
@@ -5,5 +5,11 @@
     padding-left: 20px;
     padding-top: 20px;
     border: solid black 2px;
+    border-radius: 20px;
 
+}
+
+.box-model p{
+    top: 15px;
+    left: 15px;
 }
